[tool.poetry]
name = "reddit-delta"
version = "0.1.0"
description = ""
authors = ["Tyler Evans <tyevans@gmail.com>"]
readme = "README.md"
packages = [{include = "reddit_delta"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = "^1.10.2"
typer = {extras = ["all"], version = "^0.6.1"}
rich = "^12.5.1"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[tool.poetry.scripts]
redditdelta = 'reddit_delta.main:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
